--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg bg-danger">
             <div class="container-fluid">
               <a class="navbar-brand" href="#video">Escola Dora Lygia</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,5 +32,16 @@
             </div>
           </nav>
           <iframe id="video" width="560" height="700" src="https://www.youtube.com/embed/rGQgIlmTgfU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <center>
+          <div id="sobre">
+            <img src="https://scontent.fsjk2-1.fna.fbcdn.net/v/t39.30808-6/305045167_594625969029138_662368750483113820_n.jpg?stp=dst-jpg_s960x960&_nc_cat=104&ccb=1-7&_nc_sid=e3f864&_nc_eui2=AeHo3MWPCBbE5Hvst8PUEyscZCJwCDUDXldkInAINQNeV34Wsdx41IxNLvezr45IWBeZmyCwR5ab9qlxQD9VPEGl&_nc_ohc=Ap4kykmJaMkAX9um2ra&_nc_ht=scontent.fsjk2-1.fna&oh=00_AfBZ5javpLW9S5g_byA-5ynCYLzxj59LctIz6xGYqDil2Q&oe=636E4D26">
+            <h4 class="text-capitalize text-danger">entrada da escola</h4>
+            <h5>Escola de ensino Infantil, Fundamental e Médio. Localizada em Campos do Jordão</h5>
+            <br>
+            <img id="teatro" src="https://scontent.fsjk2-1.fna.fbcdn.net/v/t1.6435-9/45407880_1918454981603756_5038429377637908480_n.jpg?stp=c0.25.525.274a_dst-jpg_p235x350&_nc_cat=104&ccb=1-7&_nc_sid=340051&_nc_eui2=AeHkpCpOF-wF7c40-gTuYD6bqBNdqqW0m_2oE12qpbSb_b8q6zAKak_vveMZDzGc74UGn7tQiV1LknoKEugtj5gz&_nc_ohc=9DTXztM8C-MAX9ipFJd&tn=2cZmNm82a91La0ga&_nc_ht=scontent.fsjk2-1.fna&oh=00_AfDkMWv0iJQpESneDUJ_N2xebiXwHKUftehIS4g05tjtmg&oe=6390C827">
+            <h4 class="text-capitalize text-danger">teatro anual</h4>
+            <h5 class="text-capitalize">teatro que acontece tods os anos apartir do sexto ano</h5>
+        </div>
+        </center>
     </body>
 </html>
